--- a/.chezmoiexternals/kubent.yaml
+++ b/.chezmoiexternals/kubent.yaml
@@ -3,4 +3,4 @@
   type: 'archive-file'
   executable: true
   path: 'kubent'
-  url: '{{ (gitHubLatestRelease "doitintl/kube-no-trouble").HTMLURL | replace "/releases/tag/" "/releases/download/" }}/kubent-{{ (gitHubLatestRelease "doitintl/kube-no-trouble").TagName }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}.tar.gz'
+  url: '{{ gitHubLatestReleaseAssetURL "doitintl/kube-no-trouble" (print "kubent-*-%s-%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
