--- a/.chezmoiexternals/tflint.yaml
+++ b/.chezmoiexternals/tflint.yaml
@@ -3,4 +3,4 @@
   type: 'archive-file'
   executable: true
   path: 'tflint'
-  url: '{{ (gitHubLatestRelease "terraform-linters/tflint").HTMLURL | replace "/releases/tag/" "/releases/download/" }}/tflint_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.zip'
+  url: '{{ gitHubLatestReleaseAssetURL "terraform-linters/tflint" (print "tflint_%s_%s.zip" .chezmoi.os .chezmoi.arch) }}'
