--- a/.chezmoiexternals/circleci.yaml
+++ b/.chezmoiexternals/circleci.yaml
@@ -4,4 +4,4 @@
   executable: true
   path: 'circleci'
   stripComponents: 1
-  url: '{{ (gitHubLatestRelease "CircleCI-Public/circleci-cli").HTMLURL | replace "/releases/tag/" "/releases/download/" }}/circleci-cli_{{ (gitHubLatestRelease "CircleCI-Public/circleci-cli").TagName | trimPrefix "v" }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.tar.gz'
+  url: '{{ gitHubLatestReleaseAssetURL "CircleCI-Public/circleci-cli" (print "circleci-cli_*_%s_%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
