--- a/.chezmoiexternals/circleci.yaml
+++ b/.chezmoiexternals/circleci.yaml
@@ -4,4 +4,4 @@
   executable: true
   path: 'circleci'
   stripComponents: 1
-  url: '{{ gitHubLatestReleaseAssetURL "CircleCI-Public/circleci-cli" (print "circleci-cli_*_%s_%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
+  url: '{{ gitHubLatestReleaseAssetURL "CircleCI-Public/circleci-cli" (printf "circleci-cli_*_%s_%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
