--- a/.chezmoiexternals/chezmoi.yaml
+++ b/.chezmoiexternals/chezmoi.yaml
@@ -2,4 +2,4 @@
 .local/bin/chezmoi:
   type: 'file'
   executable: true
-  url: '{{ gitHubLatestReleaseAssetURL "twpayne/chezmoi" (print "chezmoi-%s-%s" .chezmoi.os .chezmoi.arch) }}'
+  url: '{{ gitHubLatestReleaseAssetURL "twpayne/chezmoi" (printf "chezmoi-%s-%s" .chezmoi.os .chezmoi.arch) }}'
