--- a/.github/actions/chezmoi/action.yaml
+++ b/.github/actions/chezmoi/action.yaml
@@ -4,12 +4,15 @@ description: 'GitHub action for Chezmoi.'
 runs:
   using: 'composite'
   steps:
+    - name: 'Install dependencies'
+      run: 'sudo apt-get install --no-install-recommends curl'
+      shell: 'bash'
     - name: 'Install Chezmoi'
       run: 'curl --fail --location --no-progress-meter https://get.chezmoi.io | sh -s -- -b ${{ github.action_path }}'
-      shell: 'sh'
+      shell: 'bash'
     - name: 'Add Chezmoi to $PATH'
       run: 'echo "${{ github.action_path }}" >> $GITHUB_PATH'
-      shell: 'sh'
+      shell: 'bash'
     - name: 'Set $CHEZMOI_GITHUB_ACCESS_TOKEN'
       run: 'echo "CHEZMOI_GITHUB_ACCESS_TOKEN=${{ github.token }}" >> $GITHUB_ENV'
-      shell: 'sh'
+      shell: 'bash'
