--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: 'Install depdendencies'
         run: |
           apt-get update
-          apt-get install --yes curl git gpg software-properties-common sudo wget
+          apt-get install --yes curl  # git gpg software-properties-common sudo wget
 
       - name: 'Checkout repository'
         uses: 'actions/checkout@v4'
@@ -43,6 +43,6 @@ jobs:
         uses: './.github/actions/chezmoi'
 
       - name: 'Initialize Chezmoi'
-        run: 'chezmoi init --promptBool "Enable personal profile=${{ matrix.personal }},Enable work profile=${{ matrix.work }}" .'
+        run: 'chezmoi init --guess-repo-url=false --promptBool "Enable personal profile=${{ matrix.personal }},Enable work profile=${{ matrix.work }}" .'
       - name: 'Run Chezmoi'
         run: 'chezmoi apply --keep-going'
