--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,6 +7,7 @@ on:
       - 'master'
 jobs:
   render:
+    name: 'Render (personal=${{ matrix.personal }}, work=${{ matrix.work }})'
     runs-on: 'ubuntu-latest'
     strategy:
       fail-fast: false
@@ -36,6 +37,7 @@ jobs:
           path: '.home'
 
   shellcheck:
+    name: 'ShellCheck'
     needs: 'render'
     if: '${{ always() }}'
     runs-on: 'ubuntu-latest'
@@ -53,7 +55,6 @@ jobs:
         name: 'Run ShellCheck'
         uses: 'ludeeus/action-shellcheck@2.0.0'
 
-  # CHECKME
   shfmt:
     needs:
       - 'render'
