Fail if no files found

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,6 +35,7 @@ jobs:
         with:
           name: 'personal=${{ matrix.personal }},work=${{ matrix.work }}'
           path: '.home'
+          if-no-files-found: 'error'
 
   shellcheck:
     name: 'ShellCheck'
