Add SSH config for `octoprint.spence.network`

--- a/dot_ssh/conf.d/home.conf
+++ b/dot_ssh/conf.d/home.conf
@@ -2,6 +2,10 @@ Host homeassistant.spence.network homeassistant.trusted.spence.network
   IdentityFile ~/.ssh/keys/rpi.key
   User hassio
 
+Host octoprint.spence.network
+  IdentityFile ~/.ssh/keys/rpi.key
+  User pi
+
 Host protect.spence.network *.security.spence.network 192.168.50.*
   IdentityFile ~/.ssh/keys/ubnt.key
   User ubnt
