Don't fail if rolling release fails

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,9 +9,9 @@ on:
     - cron: '0 0 * * 1'
 jobs:
   bootstrap:
-    name: 'Bootstrap (Ubuntu ${{ matrix.ubuntu_version }}, personal=${{ matrix.personal }}, work=${{ matrix.work }})'
+    name: 'Bootstrap (ubuntu=${{ matrix.ubuntu_version }}, personal=${{ matrix.personal }}, work=${{ matrix.work }})'
     runs-on: 'ubuntu-latest'
-    continue-on-error: "${{ matrix.ubuntu_version == 'devel' }}"
+    continue-on-error: "${{ matrix.ubuntu_version == 'rolling' }}"
     container: 'ubuntu:${{ matrix.ubuntu_version }}'
     env:
       DEBIAN_FRONTEND: 'noninteractive'
