Update SSH configuration

--- a/dot_ssh/conf.d/home.conf
+++ b/dot_ssh/conf.d/home.conf
@@ -8,11 +8,15 @@ Host octoprint.spence.network
 
 Host protect.spence.network *.security.spence.network 192.168.50.*
   IdentityFile ~/.ssh/keys/ubnt.key
-  User ubnt
+  User root
+
+Host storage.spence.network 192.168.100.2
+  IdentityFile ~/.ssh/keys/ubnt.key
+  User root
 
 Host unifi.spence.network *.mgmt.spence.network 192.168.1.*
   IdentityFile ~/.ssh/keys/ubnt.key
-  User ubnt
+  User root
 
 Host *.homelab.spence.network 192.168.60.*
   IdentityFile ~/.ssh/keys/rpi.key
