Tweak SSH config

--- a/dot_ssh/conf.d/home.conf
+++ b/dot_ssh/conf.d/home.conf
@@ -1,4 +1,4 @@
-Host homeassistant.spence.network homeassistant.trusted.spence.network
+Host homeassistant.spence.network
   IdentityFile ~/.ssh/keys/rpi.key
   User hassio
 
@@ -7,17 +7,18 @@ Host octoprint.spence.network
   User pi
 
 Host protect.spence.network *.security.spence.network 192.168.50.*
-  IdentityFile ~/.ssh/keys/ubnt.key
-  User root
+  Tag unifi
 
 Host storage.spence.network 192.168.100.2
-  IdentityFile ~/.ssh/keys/ubnt.key
-  User root
+  Tag unifi
 
 Host unifi.spence.network *.mgmt.spence.network 192.168.1.*
-  IdentityFile ~/.ssh/keys/ubnt.key
-  User root
+  Tag unifi
 
 Host *.homelab.spence.network 192.168.60.*
   IdentityFile ~/.ssh/keys/rpi.key
   User pi
+
+Match tagged unifi
+  IdentityFile ~/.ssh/keys/ubnt.key
+  User root
